# c_t_sur

./: CMakeLists.txt  main.c
lib/: edge-detect.c
